.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.2.3 - Unreleased
------------------

- Make the Groups Overview search post back to the same page, since it displays a
  lot more useful information than the prefs_user_group_search, and fits more
  with the way the Users Overview works. Include a "Show all" button as well. 
  [esteele]

- Convert event-registration.js to use jQuery and remove it from new sites.
  This closes http://dev.plone.org/ticket/8097
  [mj]

3.2.2 - March 3, 2009
---------------------

- Register 3.2 -> 3.2.1 migration step with the migration machinery. This fixes
  problems due to a missing site  property for migrated sites.
  [matthewwilkes]

- Fix the internalization of folder_rename status message
  http://dev.plone.org/plone/ticket/8750
  [encolpe]


3.2.1 - February 4, 2009
------------------------

- Add dependency on Products.NuPlone to prevents sites who use NuPlone from
  breaking when upgrading from Plone 3.0.x or 3.1.x to 3.2 or later.
  [wichert]

- Fix contact_info.cpt so it bases the appearance of the fullname and email
  fields on whether they are set in the current member's profile, rather
  than on whether the current user is anonymous or not.  This closes
  http://dev.plone.org/plone/ticket/8526
  [davisagli]

- Update default frontpage to refer to Plone 3 instead of 3.0.
  [wichert]

- Added time_only for use with toLocalizedTime so that event_view now localizes
  the start/end times if the start/end dates are the same. Added migration for
  3.2 to 3.2.1 to add new property to the propery tool. Closes
  http://dev.plone.org/plone/ticket/8607
  [jnelson, calvinhp]

- Fixed links-plain issue on the front-page. This closes  
  http://dev.plone.org/plone/ticket/6479. 
  [cwainwright, calvinhp] 

- Put in workaround for IE6 background caching problem, closes