@@ -8,6 +8,11 @@ Changelog
 3.2.3 - Unreleased
 ------------------
 
+- Added failing tests for subtopic and the ATFriendlyDateCriteria used for
+  past events. The fix is added to Products.ATContentTypes.
+  https://dev.plone.org/plone/ticket/8827 
+  [pelle]
+
 - Make the Groups Overview search post back to the same page, since it displays a
   lot more useful information than the prefs_user_group_search, and fits more
   with the way the Users Overview works. Include a "Show all" button as well. 
